--- a/Networking.vcxproj.filters
+++ b/Networking.vcxproj.filters
@@ -158,5 +158,8 @@
     <ClCompile Include="Src\Objects\NetObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Core\LayerSettings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
