Partial refactor completion

--- a/Networking.vcxproj
+++ b/Networking.vcxproj
@@ -168,13 +168,27 @@
     <ClInclude Include="Include\GurgelNet\Serializables\NetString.h" />
     <ClInclude Include="Include\GurgelNet\Serialization\INetSerializable.h" />
     <ClInclude Include="Include\GurgelNet\Serialization\INetSerializer.h" />
-    <ClInclude Include="Src\BaseNetLayer.h" />
-    <ClInclude Include="Src\ClientLayer.h" />
     <ClInclude Include="Src\Core\Logging.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\BaseNetLayerMessages.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\ClientConnectionMessageProcessor.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\ConnectionMessages.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\NetLayerMessageTypes.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\ServerConnectionMessageProcessor.h" />
+    <ClInclude Include="Src\Include\NetLayers\Client\ClientLayerConnectionHandler.h" />
+    <ClInclude Include="Src\Include\NetLayers\Client\ClientLayerNetworkHandler.h" />
+    <ClInclude Include="Src\Include\NetLayers\Client\NetLayerClient.h" />
+    <ClInclude Include="Src\Include\NetLayers\NetLayerContext.h" />
+    <ClInclude Include="Src\Include\NetLayers\NetLayerCallbackStore.h" />
+    <ClInclude Include="Src\Include\NetLayers\NetLayerNetworkHandler.h" />
+    <ClInclude Include="Src\Include\NetLayers\NetLayerShared.h" />
+    <ClInclude Include="Src\Include\NetLayers\Server\NetLayerServer.h" />
+    <ClInclude Include="Src\Include\NetLayers\Server\ServerLayerConnections.h" />
+    <ClInclude Include="Src\Include\NetLayers\Server\ServerLayerConnectionsHandler.h" />
+    <ClInclude Include="Src\Include\NetLayers\Server\ServerLayerNetworkHandler.h" />
     <ClInclude Include="Src\Messages\ClientInternalMessageProcessor.h" />
     <ClInclude Include="Src\Messages\InternalMessageTypes.h" />
-    <ClInclude Include="Src\Messages\NetMessage.h" />
-    <ClInclude Include="Src\Messages\NetMessageQueue.h" />
+    <ClInclude Include="Src\Include\Messaging\NetMessage.h" />
+    <ClInclude Include="Src\Include\Messaging\NetMessageQueue.h" />
     <ClInclude Include="Src\Messages\NetVarMessages.h" />
     <ClInclude Include="Src\Messages\ObjectMessageTypes.h" />
     <ClInclude Include="Src\Messages\ServerInternalMessageProcessor.h" />
@@ -183,18 +197,23 @@
     <ClInclude Include="Src\Objects\NetworkVariableStore.h" />
     <ClInclude Include="Src\Serialization\NetMessageReader.h" />
     <ClInclude Include="Src\Serialization\NetMessageWriter.h" />
-    <ClInclude Include="Src\ServerLayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Core\LayerSettings.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Client\ClientLayerConnectionHandler.cpp" />
+    <ClCompile Include="Src\Source\NetLayerMessages\ClientConnectionMessageProcessor.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Client\ClientLayerNetworkHandler.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Client\NetLayerClient.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\NetLayerNetworkHandler.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\NetLayerShared.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Server\NetLayerServer.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Server\ServerLayerConnectionsHandler.cpp" />
     <ClCompile Include="Src\Objects\NetObject.cpp" />
-    <ClCompile Include="Src\BaseNetLayer.cpp" />
-    <ClCompile Include="Src\ClientLayer.cpp" />
     <ClCompile Include="Src\Core\LibrarySettings.cpp" />
     <ClCompile Include="Src\Core\Logging.cpp" />
     <ClCompile Include="Src\Messages\ClientInternalMessageProcessor.cpp" />
-    <ClCompile Include="Src\Messages\NetMessage.cpp" />
-    <ClCompile Include="Src\Messages\NetMessageQueue.cpp" />
+    <ClCompile Include="Src\Source\Messaging\NetMessage.cpp" />
+    <ClCompile Include="Src\Source\Messaging\NetMessageQueue.cpp" />
     <ClCompile Include="Src\Messages\ServerInternalMessageProcessor.cpp" />
     <ClCompile Include="Src\Network.cpp" />
     <ClCompile Include="Src\Objects\NetObjectInitializer.cpp" />
@@ -203,7 +222,9 @@
     <ClCompile Include="Src\Serializables\NetString.cpp" />
     <ClCompile Include="Src\Serialization\NetMessageReader.cpp" />
     <ClCompile Include="Src\Serialization\NetMessageWriter.cpp" />
-    <ClCompile Include="Src\ServerLayer.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\NetLayerCallbackStore.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Server\ServerLayerConnections.cpp" />
+    <ClCompile Include="Src\Source\NetLayers\Server\ServerLayerNetworkHandler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
