Completed refactor (needs testing)

--- a/Networking.vcxproj
+++ b/Networking.vcxproj
@@ -171,9 +171,13 @@
     <ClInclude Include="Src\Core\Logging.h" />
     <ClInclude Include="Src\Include\NetLayerMessages\BaseNetLayerMessages.h" />
     <ClInclude Include="Src\Include\NetLayerMessages\ClientConnectionMessageProcessor.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\ClientObjectMessageProcessors.h" />
     <ClInclude Include="Src\Include\NetLayerMessages\ConnectionMessages.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\LateJoinPayload.h" />
     <ClInclude Include="Src\Include\NetLayerMessages\NetLayerMessageTypes.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\ObjectMessages.h" />
     <ClInclude Include="Src\Include\NetLayerMessages\ServerConnectionMessageProcessor.h" />
+    <ClInclude Include="Src\Include\NetLayerMessages\ServerObjectMessageProcessor.h" />
     <ClInclude Include="Src\Include\NetLayers\Client\ClientLayerConnectionHandler.h" />
     <ClInclude Include="Src\Include\NetLayers\Client\ClientLayerNetworkHandler.h" />
     <ClInclude Include="Src\Include\NetLayers\Client\NetLayerClient.h" />
@@ -185,21 +189,26 @@
     <ClInclude Include="Src\Include\NetLayers\Server\ServerLayerConnections.h" />
     <ClInclude Include="Src\Include\NetLayers\Server\ServerLayerConnectionsHandler.h" />
     <ClInclude Include="Src\Include\NetLayers\Server\ServerLayerNetworkHandler.h" />
-    <ClInclude Include="Src\Messages\ClientInternalMessageProcessor.h" />
-    <ClInclude Include="Src\Messages\InternalMessageTypes.h" />
+    <ClInclude Include="Src\Include\Objects\ClientObjectHandler.h" />
+    <ClInclude Include="Src\Include\Objects\NetObjectHandle.h" />
+    <ClInclude Include="Src\Include\Objects\NetObjectList.h" />
+    <ClInclude Include="Src\Include\Objects\NetVarList.h" />
+    <ClInclude Include="Src\Include\Objects\ServerObjectHandler.h" />
+    <ClInclude Include="Src\Include\Objects\SharedObjectHandler.h" />
     <ClInclude Include="Src\Include\Messaging\NetMessage.h" />
     <ClInclude Include="Src\Include\Messaging\NetMessageQueue.h" />
-    <ClInclude Include="Src\Messages\NetVarMessages.h" />
-    <ClInclude Include="Src\Messages\ObjectMessageTypes.h" />
-    <ClInclude Include="Src\Messages\ServerInternalMessageProcessor.h" />
-    <ClInclude Include="Src\Objects\NetObjectInitializer.h" />
-    <ClInclude Include="Src\Objects\NetObjectList.h" />
-    <ClInclude Include="Src\Objects\NetworkVariableStore.h" />
-    <ClInclude Include="Src\Serialization\NetMessageReader.h" />
-    <ClInclude Include="Src\Serialization\NetMessageWriter.h" />
+    <ClInclude Include="Src\Include\Objects\NetObjectInitializer.h" />
+    <ClInclude Include="Src\Include\Serialization\NetMessageReader.h" />
+    <ClInclude Include="Src\Include\Serialization\NetMessageWriter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Core\LayerSettings.cpp" />
+    <ClCompile Include="Src\Source\NetLayerMessages\ServerObjectMessageProcessor.cpp" />
+    <ClCompile Include="Src\Source\NetLayerMessages\ClientObjectMessageProcessors.cpp" />
+    <ClCompile Include="Src\Source\Objects\ServerObjectHandler.cpp" />
+    <ClCompile Include="Src\Source\Objects\SharedObjectHandler.cpp" />
+    <ClCompile Include="Src\Source\Objects\ClientObjectHandler.cpp" />
+    <ClCompile Include="Src\Source\NetLayerMessages\ServerConnectionMessageProcessor.cpp" />
     <ClCompile Include="Src\Source\NetLayers\Client\ClientLayerConnectionHandler.cpp" />
     <ClCompile Include="Src\Source\NetLayerMessages\ClientConnectionMessageProcessor.cpp" />
     <ClCompile Include="Src\Source\NetLayers\Client\ClientLayerNetworkHandler.cpp" />
@@ -208,23 +217,22 @@
     <ClCompile Include="Src\Source\NetLayers\NetLayerShared.cpp" />
     <ClCompile Include="Src\Source\NetLayers\Server\NetLayerServer.cpp" />
     <ClCompile Include="Src\Source\NetLayers\Server\ServerLayerConnectionsHandler.cpp" />
-    <ClCompile Include="Src\Objects\NetObject.cpp" />
+    <ClCompile Include="Src\Source\Objects\NetObject.cpp" />
     <ClCompile Include="Src\Core\LibrarySettings.cpp" />
     <ClCompile Include="Src\Core\Logging.cpp" />
-    <ClCompile Include="Src\Messages\ClientInternalMessageProcessor.cpp" />
     <ClCompile Include="Src\Source\Messaging\NetMessage.cpp" />
     <ClCompile Include="Src\Source\Messaging\NetMessageQueue.cpp" />
-    <ClCompile Include="Src\Messages\ServerInternalMessageProcessor.cpp" />
     <ClCompile Include="Src\Network.cpp" />
-    <ClCompile Include="Src\Objects\NetObjectInitializer.cpp" />
-    <ClCompile Include="Src\Objects\NetObjectList.cpp" />
-    <ClCompile Include="Src\Objects\NetworkVariable.cpp" />
-    <ClCompile Include="Src\Serializables\NetString.cpp" />
-    <ClCompile Include="Src\Serialization\NetMessageReader.cpp" />
-    <ClCompile Include="Src\Serialization\NetMessageWriter.cpp" />
+    <ClCompile Include="Src\Source\Objects\NetObjectInitializer.cpp" />
+    <ClCompile Include="Src\Source\Objects\NetworkVariable.cpp" />
+    <ClCompile Include="Src\Source\Serializable\NetString.cpp" />
+    <ClCompile Include="Src\Source\Serialization\NetMessageReader.cpp" />
+    <ClCompile Include="Src\Source\Serialization\NetMessageWriter.cpp" />
     <ClCompile Include="Src\Source\NetLayers\NetLayerCallbackStore.cpp" />
     <ClCompile Include="Src\Source\NetLayers\Server\ServerLayerConnections.cpp" />
     <ClCompile Include="Src\Source\NetLayers\Server\ServerLayerNetworkHandler.cpp" />
+    <ClCompile Include="Src\Source\Objects\NetObjectList.cpp" />
+    <ClCompile Include="Src\Source\Objects\NetVarList.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
