--- a/Networking.vcxproj.filters
+++ b/Networking.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="Src\Include\NetLayerMessages\LateJoinPayload.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Include\GurgelNet\Objects\NetObjectOwnership.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Network.cpp">
